# rift

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BEFORE_PUBLISHING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.server  ITEMS.md  LAUNCHER.md  LICENSE  README.md  TALENT_TREE.md  TALENT_TREE_BLUEPRINT.md  TODO.md  about.hbs  about.toml  compile_shaders.sh  docker-compose.yml  fly.toml
crates/rift-audio/: Cargo.toml
crates/rift-audio/src/: lib.rs
crates/rift-client/: Cargo.toml  build.rs
crates/rift-client/src/: lib.rs  main.rs  net_client.rs
crates/rift-client/src/auth/: dev.rs  mod.rs  steam.rs
crates/rift-client/src/game/: ability.rs  ability_audio.rs  audio.rs  audio_banks.rs  avatar_cosmetics.rs  character_select.rs  character_spawn.rs  chat.rs  cursor.rs  environment.rs  equipment_visuals.rs  floor.rs  hud.rs  loot_models.rs  loot_system.rs  meters.rs  mod.rs  monster_assets.rs  mp_inventory_ui.rs  party.rs  pause.rs  player_state.rs  portal_system.rs  selection.rs  shrine_system.rs  spellbook.rs  stash_system.rs  state.rs  sub_state.rs  talent_tree.rs  torches.rs  transition.rs  unit_frame.rs  weapon_visuals.rs
crates/rift-client/src/game/hud/: exploration.rs  loot_labels.rs  mod.rs  (+2 more)
crates/rift-client/src/net/: commands.rs  mod.rs  snapshot.rs  world_sync.rs
crates/rift-engine/: Cargo.toml  build.rs
crates/rift-engine/src/: animation.rs  animation_profile.rs  assets.rs  foot_ik.rs  hot_reload.rs  input.rs  lib.rs  window.rs
crates/rift-engine/src/ai/: behavior.rs  blackboard.rs  mod.rs  pathfinding.rs  systems.rs  trees.rs
crates/rift-engine/src/combat/: ability.rs  ability_runtime.rs  attributes.rs  class.rs  debuff.rs  experience.rs  mod.rs  projectile.rs  projectile_pool.rs  talent.rs
crates/rift-engine/src/dungeon/: config.rs  mod.rs
crates/rift-engine/src/ecs/: components.rs  mod.rs  systems.rs
crates/rift-engine/src/loot/: affix.rs  dictionary.rs  drops.rs  generation.rs  inventory.rs  item.rs  mod.rs
crates/rift-engine/src/renderer/: asset_decode.rs  blood.rs  camera.rs  decals.rs  depth.rs  draw_loop.rs  font.rs  forward.rs  gpu_skin.rs  material.rs  mesh.rs  mod.rs  objects.rs  overlay.rs  particle_renderer.rs  particles.rs  pipeline.rs  post.rs  shadow.rs  shadow_point.rs  sky.rs  texture.rs  uniform.rs  uniforms.rs
crates/rift-engine/src/resources/: gltf_loader.rs  mod.rs  shader.rs  texture.rs
crates/rift-engine/src/ui/: combat_text.rs  im.rs  inventory_ui.rs  mod.rs
crates/rift-engine/src/vulkan/: buffer.rs  commands.rs  device.rs  instance.rs  mod.rs  pipeline.rs  swapchain.rs  sync.rs
crates/rift-game/: Cargo.toml
crates/rift-game/src/: abilities.rs  attributes.rs  character.rs  character_select.rs  classes.rs  combat_text.rs  components.rs  debuffs.rs  decals.rs  effects.rs  enemy_attacks.rs  environment.rs  equipment_visuals.rs  experience.rs  floor.rs  hero.rs  hud.rs  kinematic.rs  lib.rs  loadout.rs  loot_manager.rs  main.rs  minions.rs  monsters.rs  player.rs  player_arms.rs  projectiles.rs  props.rs  rift_state.rs  stats.rs  talents.rs
crates/rift-game/src/loot/: ability_mods.rs  affixes.rs  drops.rs  enchant.rs  equipment.rs  families.rs  inventory.rs  item.rs  items.rs  mod.rs  name_gen.rs  rarity.rs  rng.rs  roll.rs  stats.rs  tooltip.rs  uniques.rs  wire.rs
crates/rift-game/src/talents/: healer.rs  hub.rs  mage.rs  mod.rs  summoner.rs  synergy.rs  warrior.rs
crates/rift-net/: Cargo.toml
crates/rift-net/src/: auth_dev.rs  channel.rs  codec.rs  ids.rs  lib.rs  messages.rs  protocol.rs  transport.rs
crates/rift-persistence/: Cargo.toml
crates/rift-persistence/migrations/: 20260505000000_init.sql  20260506000000_account_scoped_names.sql  20260506000001_inventory_items.sql  20260506000002_inventory_equipped_slot.sql  20260507000000_stash_items.sql  20260507000001_inventory_slot_index.sql  20260507000002_character_loadout.sql  20260507000003_inventory_anchored.sql  20260508000000_deepest_cleared_floor.sql  20260508000001_loadout_unique_abilities.sql  20260508000002_character_shards.sql  20260508000003_stash_tabs.sql  20260509000000_item_provenance.sql  20260510000000_account_key.sql  20260511000000_account_key_required.sql  20260512000000_inventory_items_unique_id.sql  20260513000000_rift_touched.sql  20260514000000_character_talents.sql  20260515000000_character_appearance.sql  20260515010000_anvil_enchanting.sql
crates/rift-persistence/src/: lib.rs
crates/rift-server/: Cargo.toml
crates/rift-server/src/: chat.rs  instance.rs  main.rs  party.rs  session.rs  wire.rs
crates/rift-server/src/auth/: dev.rs  mod.rs  steam.rs
crates/rift-server/src/handlers/: chat.rs  inventory.rs  mod.rs  party.rs  persistence.rs  portal.rs  session.rs
crates/rift-server/src/sim/: ability.rs  ability_ops.rs  actor.rs  channel.rs  combat_ctx.rs  damage.rs  debuff.rs  effect.rs  enemy.rs  equip_tests.rs  floor.rs  floor_ops.rs  inventory_ops.rs  loot.rs  loot_ops.rs  meters.rs  minions.rs  mod.rs  player.rs  player_ops.rs  procs.rs  projectile.rs  provenance_tests.rs  shrine.rs  snapshot.rs  stash_ops.rs  step.rs  transforms.rs  vote.rs  voting_ops.rs
crates/rift-ui/: Cargo.toml
crates/rift-ui-im/: Cargo.toml
crates/rift-ui-im/src/: anchor.rs  color.rs  draw_list.rs  fit.rs  id.rs  im_key.rs  layer.rs  layout.rs  lib.rs  rect.rs  state.rs  text_font.rs  theme.rs  ui.rs  ui_input.rs  world_ui.rs
crates/rift-ui-im/src/widgets/: banner.rs  button.rs  frame.rs  inline_edit.rs  item_slot.rs  mini_button.rs  mod.rs  pan_zoom.rs  panel_header.rs  progress_bar.rs  text_field.rs  tooltip.rs  two_stage_confirm.rs
crates/rift-ui-types/: Cargo.toml
crates/rift-ui-types/src/: character_select.rs  chat.rs  hud.rs  inventory.rs  lib.rs  pause_menu.rs  settings.rs  spellbook.rs  talents.rs
crates/rift-ui/src/: character_select.rs  chat.rs  icons.rs  lib.rs  pause_menu.rs  settings.rs  spellbook.rs  talents.rs
crates/rift-ui/src/hud/: ability_bar.rs  minimap.rs  mod.rs  vitals.rs
crates/rift-ui/src/inventory/: bag_panel.rs  drag.rs  grid_drop.rs  layout.rs  mod.rs  stash_panel.rs  stats_panel.rs  tooltips.rs
(+195 files in other folders)
