[workspace]
members = ["crates/rift-engine", "crates/rift-math", "crates/rift-game", "crates/rift-client", "crates/rift-net", "crates/rift-server", "crates/rift-dungeon", "crates/rift-persistence", "crates/rift-audio"]
resolver = "2"

[workspace.dependencies]
ash = "0.38"
ash-window = "0.13"
winit = "0.30"
glam = { version = "0.32.1", features = ["bytemuck", "serde"] }
raw-window-handle = "0.6"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
gpu-allocator = "0.28"
image = "0.25"
gltf = { version = "1", default-features = false, features = ["utils", "import", "names"] }
hecs = "0.10"
shaderc = "0.10.1"
notify = "8.2.0"
bytemuck = { version = "1.14", features = ["derive"] }
rayon = "1.10"
# Networking (Phase 1 of MP): renet for the UDP transport with reliable +
# unreliable channels, serde+bincode for the wire format. Kept in the
# workspace table so any future binary (rift-server) shares the version.
renet = "0.0.16"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
thiserror = "1"
# Cross-platform Ctrl-C / SIGTERM handler used by the dedicated
# server's graceful-shutdown path so a kill-mid-write doesn't
# drop pending persistence writes on the floor.
ctrlc = { version = "3", features = ["termination"] }

# `kira` (and its decoder dependencies) decode audio in the
# audio thread; built unoptimised it cannot keep up with even a
# handful of simultaneous OGG sounds and produces audible
# crackling. Forcing opt-level=3 only for these deps trades a
# small one-time compile cost for clean dev-build audio. Per
# https://docs.rs/kira/latest/kira/#performance-using-the-dev-profile.
[profile.dev.package.kira]
opt-level = 3
[profile.dev.package.cpal]
opt-level = 3
[profile.dev.package.symphonia]
opt-level = 3
[profile.dev.package.symphonia-format-ogg]
opt-level = 3
[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3
[profile.dev.package.symphonia-format-riff]
opt-level = 3
[profile.dev.package.symphonia-codec-pcm]
opt-level = 3
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
