[workspace]
members = ["crates/rift-engine", "crates/rift-math", "crates/rift-game", "crates/rift-client", "crates/rift-net", "crates/rift-server", "crates/rift-dungeon", "crates/rift-persistence", "crates/rift-audio", "crates/rift-ui-im", "crates/rift-ui-types", "crates/rift-ui"]
resolver = "2"

[workspace.dependencies]
ash = "0.38"
ash-window = "0.13"
winit = "0.30"
glam = { version = "0.32.1", features = ["bytemuck", "serde"] }
raw-window-handle = "0.6"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
gpu-allocator = "0.28"
image = "0.25"
gltf = { version = "1", default-features = false, features = ["utils", "import", "names"] }
hecs = "0.10"
shaderc = "0.10.1"
notify = "8.2.0"
bytemuck = { version = "1.14", features = ["derive"] }
rayon = "1.10"
# TTF rasteriser used by the overlay font path. Pure Rust, no
# system deps, fast enough to build the entire ASCII glyph
# atlas at startup in a few ms. Replaces the legacy 6x8
# bitmap font with the bundled PT Serif faces.
fontdue = "0.9"
# Networking (Phase 1 of MP): renet for the UDP transport with reliable +
# unreliable channels, serde+bincode for the wire format. Kept in the
# workspace table so any future binary (rift-server) shares the version.
renet = "0.0.16"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
thiserror = "1"
# Cross-platform Ctrl-C / SIGTERM handler used by the dedicated
# server's graceful-shutdown path so a kill-mid-write doesn't
# drop pending persistence writes on the floor.
ctrlc = { version = "3", features = ["termination"] }

# Auth crypto. `hmac` + `sha2` build the HMAC-SHA256 the dev
# auth path uses to sign / verify the (identity, nonce, ts)
# tuple. `subtle` gives us a constant-time comparison so a
# malicious client can't measure signature mismatches by
# timing a tight reconnect loop.
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"

# Steamworks Game Server / Client SDK bindings, used by the
# production Steam auth path. Opt-in via the `steam-auth`
# cargo feature on both rift-client and rift-server so default
# builds stay free of the SDK redistributable. `steamworks-sys`
# bundles the public Steamworks SDK redist as part of its
# source, so no manual `STEAM_SDK_LOCATION` setup is needed at
# compile time; the runtime requirement (Steam client running,
# or steam_appid.txt next to the binary) is documented in
# BEFORE_PUBLISHING.md.
steamworks = "0.11"

# `kira` (and its decoder dependencies) decode audio in the
# audio thread; built unoptimised it cannot keep up with even a
# handful of simultaneous OGG sounds and produces audible
# crackling. Forcing opt-level=3 only for these deps trades a
# small one-time compile cost for clean dev-build audio. Per
# https://docs.rs/kira/latest/kira/#performance-using-the-dev-profile.
[profile.dev.package.kira]
opt-level = 3
[profile.dev.package.cpal]
opt-level = 3
[profile.dev.package.symphonia]
opt-level = 3
[profile.dev.package.symphonia-format-ogg]
opt-level = 3
[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3
[profile.dev.package.symphonia-format-riff]
opt-level = 3
[profile.dev.package.symphonia-codec-pcm]
opt-level = 3
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
