[package]
name = "rift-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rift-engine = { path = "../rift-engine" }
rift-game = { path = "../rift-game" }
rift-net = { path = "../rift-net" }
rift-dungeon = { path = "../rift-dungeon" }
rift-math = { path = "../rift-math" }
rift-audio = { path = "../rift-audio" }
hecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[features]
# When enabled, the client mints `AuthCredential::Steam`
# instead of dev credentials. The Phase-5 stub returns a
# placeholder that the server's matching stub rejects, so the
# feature exists today only to make the cfg paths legal —
# real Steamworks integration lands later.
steam-auth = []

[[bin]]
name = "rift"
path = "src/main.rs"
