[package]
name = "rift-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rift-engine = { path = "../rift-engine" }
rift-game = { path = "../rift-game" }
rift-net = { path = "../rift-net" }
rift-dungeon = { path = "../rift-dungeon" }
rift-math = { path = "../rift-math" }
rift-audio = { path = "../rift-audio" }
hecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
steamworks = { workspace = true, optional = true }

[features]
# When enabled, the client mints a real Steam session ticket
# via the Steamworks SDK (`ISteamUser::GetAuthSessionTicket`)
# and ships it in `Hello.auth_ticket`. Off by default so the
# default dev loop doesn't require Steam to be running. With
# this feature on, the runtime requires Steam reachable + a
# `steam_appid.txt` next to the binary (`480` for the Spacewar
# sandbox during pre-release testing; the real appid once we
# onboard with Valve).
steam-auth = ["dep:steamworks"]

[[bin]]
name = "rift"
path = "src/main.rs"
