[package]
name = "rift-engine"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
rift-dungeon = { path = "../rift-dungeon" }
rift-game = { path = "../rift-game" }
rift-math = { path = "../rift-math" }
ash = { workspace = true }
ash-window = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
gpu-allocator = { workspace = true }
shaderc = { workspace = true }
notify = { workspace = true }
bytemuck = { workspace = true }
gltf = { workspace = true }
hecs = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }

[build-dependencies]
shaderc = "0.10.1"

[dev-dependencies]
env_logger = { workspace = true }
glam = { workspace = true }

[[example]]
name = "triangle"
path = "../../examples/triangle.rs"
