[package]
name = "rift-game"
version = "0.1.0"
edition = "2021"

[dependencies]
rift-engine = { path = "../rift-engine" }
rift-math = { path = "../rift-math" }
hecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "rift"
path = "src/main.rs"
