[package]
name = "rift-persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
