[package]
name = "rift-server"
version = "0.1.0"
edition = "2021"
publish = false

# Headless dedicated-server binary for Rift Crawler.
#
# This crate is intentionally lean: it pulls rift-net for the wire
# format and renet endpoint, plus hecs for a future ECS world to tick.
# It MUST NOT depend on rift-engine (which transitively pulls Vulkan,
# winit, gltf, etc.) — the whole point of the dedicated server is to
# be runnable on a headless box.

[dependencies]
rift-net = { path = "../rift-net" }
rift-dungeon = { path = "../rift-dungeon" }
rift-game = { path = "../rift-game" }
rift-persistence = { path = "../rift-persistence" }
hecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
ctrlc = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }

[features]
# When enabled, links the `steamworks`-driven Steam ticket
# verifier into the auth resolver. Off by default so the
# dedicated-server build stays free of the Steamworks SDK
# requirement; production server builds set this. The Phase 2
# stub keeps the feature compiling without yet calling the
# Steam Web API — the actual HTTP integration lands later.
steam-auth = []
