[package]
name = "rift-server"
version = "0.1.0"
edition = "2021"
publish = false

# Headless dedicated-server binary for Rift Crawler.
#
# This crate is intentionally lean: it pulls rift-net for the wire
# format and renet endpoint, plus hecs for a future ECS world to tick.
# It MUST NOT depend on rift-engine (which transitively pulls Vulkan,
# winit, gltf, etc.) — the whole point of the dedicated server is to
# be runnable on a headless box.

[dependencies]
rift-net = { path = "../rift-net" }
rift-dungeon = { path = "../rift-dungeon" }
rift-game = { path = "../rift-game" }
rift-persistence = { path = "../rift-persistence" }
hecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
ctrlc = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }
steamworks = { workspace = true, optional = true }

[features]
# When enabled, links the Steamworks Game Server SDK and routes
# auth through `ISteamGameServer::BeginAuthSession`. Off by
# default so non-production builds (CI, dev loop, headless
# integration tests) don't pull the SDK redistributable or
# require Steam at runtime. Production server builds set this;
# the runtime side needs Steam reachable over the network.
# Today we run against Spacewar appid 480 for end-to-end
# testing — see BEFORE_PUBLISHING.md.
steam-auth = ["dep:steamworks"]
